--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/vue-fontawesome": "^3.0.0-5",
+    "aos": "^2.3.4",
     "v-mask": "^2.3.0",
     "vee-validate": "^4.12.6",
     "vue": "^3.4.15",
+    "vue-ai-carousel": "^1.1.1",
     "vue-router": "^4.2.5",
     "vue-the-mask": "^0.11.1",
+    "vue3-carousel": "^0.3.3",
     "yup": "^1.4.0"
   },
   "devDependencies": {
@@ -27,7 +30,7 @@
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-vue": "^9.24.0",
-    "prettier": "3.2.5",
+    "prettier": "^3.2.5",
     "sass": "^1.71.1",
     "sass-loader": "^14.1.1",
     "vite": "^5.0.11"
