--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,15 +5,29 @@
   },
   "extends": [
     "eslint:recommended",
-    "plugin:vue/vue3-recommended",
+    "plugin:vue/vue3-strongly-recommended",
     "plugin:prettier/recommended"
   ],
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": ["vue"],
+  "plugins": ["vue", "prettier"],
   "rules": {
+    "vue/multi-word-component-names": ["error", {
+      "ignores": ["Todo"]
+    }],
+    "vue/html-closing-bracket-newline": [
+      "error",
+      {
+        "singleline": "never",
+        "multiline": "always",
+        "selfClosingTag": {
+          "singleline": "never",
+          "multiline": "always"
+        }
+      }
+    ],
     "linebreak-style": ["error", "windows"]
   }
 }
