--- a/package.json
+++ b/package.json
@@ -28,9 +28,10 @@
     "@vitejs/plugin-vue": "^5.0.3",
     "eslint": "^8.57.0",
     "eslint-config-google": "^0.14.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-vue": "^9.24.0",
-    "prettier": "^3.2.5",
+    "eslint-plugin-vue": "^9.25.0",
+    "prettier": "3.2.5",
     "sass": "^1.71.1",
     "sass-loader": "^14.1.1",
     "vite": "^5.0.11"
